--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </main>
 
   <!-- Scrapts -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.6/SmoothScroll.min.js"></script>
+  <script src="scripts/smoothscroll-polyfill/dist/smoothscroll.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts/question-data.js"></script>
   <script src="scripts/index.js"></script>
